add material icns goolge fonts, remove fontawesome, change icons

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,7 +1,4 @@
-<div
-  class="flex flex-col min-h-screen"
-  [ngClass]="{'background-image': isLogged}"
->
+<div class="flex flex-col min-h-screen background-image">
   <app-loading></app-loading>
   <app-feedback></app-feedback>
   <app-header></app-header>
