--- a/frontend/src/app/components/components/component-details/component-details.component.html
+++ b/frontend/src/app/components/components/component-details/component-details.component.html
@@ -8,14 +8,14 @@
         class="btn btn-outline-secondary shadow-thick-secondary"
         (click)="edit()"
       >
-        <fa-icon [icon]="faPencil"></fa-icon>
+        <span class="material-icons"> edit </span>
       </button>
       <button
         type="button"
         class="btn btn-outline-danger shadow-thick-secondary"
         (click)="delete()"
       >
-        <fa-icon [icon]="faTrash"></fa-icon>
+        <span class="material-icons"> delete </span>
       </button>
     </div>
   </div>
