--- a/frontend/src/app/components/components/components/components.component.html
+++ b/frontend/src/app/components/components/components/components.component.html
@@ -15,7 +15,7 @@
         (click)="createComponent()"
         class="btn btn-primary shadow-thick-secondary"
       >
-        <fa-icon [icon]="faPlus"></fa-icon>
+        <span class="material-icons"> add </span>
       </button>
     </div>
   </div>
