--- a/frontend/src/app/properties/components/property-form/property-form.component.html
+++ b/frontend/src/app/properties/components/property-form/property-form.component.html
@@ -10,6 +10,6 @@
     placeholder="Nueva propiedad"
   />
   <button type="submit" class="text-secondary-400 hover:text-primary-500 px-2">
-    <fa-icon [icon]="faSave" class="text-3xl sm:text-base"></fa-icon>
+    <span class="material-icons text-3xl sm:text-lg">save</span>
   </button>
 </form>
