--- a/frontend/src/app/shared/components/feedback/feedback.component.html
+++ b/frontend/src/app/shared/components/feedback/feedback.component.html
@@ -3,5 +3,5 @@
   #toast
 >
   <span #content></span>
-  <fa-icon [icon]="faTimes" (click)="hide()" class="cursor-pointer"></fa-icon>
+  <span class="material-icons cursor-pointer" (click)="hide()">close</span>
 </div>
