--- a/frontend/src/app/recipes/components/recipes/recipes.component.html
+++ b/frontend/src/app/recipes/components/recipes/recipes.component.html
@@ -36,10 +36,10 @@
         class="group flex flex-col justify-center border-2 border-dashed rounded-lg p-4 m-2 relative cursor-pointer text-center hover:opacity-50 border-secondary-300 bg-basic-900 dark:bg-secondary-400"
         (click)="onCreate()"
       >
-        <fa-icon
-          [icon]="faPlus"
-          class="fa-2x text-secondary-300 dark:text-basic-700"
-        ></fa-icon>
+        <span
+          class="material-icons md-36 text-secondary-300 dark:text-basic-700"
+          >add</span
+        >
         <h4 class="text-secondary-300 dark:text-basic-700">Formular</h4>
       </div>
       <div class="p-2" *ngFor="let recipe of recipes">
