--- a/frontend/src/app/shared/components/footer/footer.component.html
+++ b/frontend/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,10 @@
 <div class="w-full">
   <nav class="m-2">
     <!-- NO AUTH -->
-    <ul *ngIf="!isLogged" class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap">
+    <ul
+      *ngIf="!isLogged"
+      class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap"
+    >
       <li class="mx-1">
         <a
           class="text-sm text-basic-500 hover:text-primary-500"
@@ -32,9 +35,11 @@
       </li>
     </ul>
 
-
     <!-- AUTH -->
-    <ul *ngIf="isLogged" class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap">
+    <ul
+      *ngIf="isLogged"
+      class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap"
+    >
       <li class="mx-1">
         <a
           class="text-sm text-basic-500 hover:text-primary-500"
@@ -66,8 +71,8 @@
     </ul>
   </nav>
   <div class="text-center">
-    <span class="text-basic-400 text-xs"
-      ><fa-icon [icon]="faCopyright"></fa-icon> 2022. Todos los derechos
+    <span class="text-basic-400 text-xs">
+      <span class="material-icons inline-block text-xs">copyright</span> 2022. Todos los derechos
       reservados.</span
     >
   </div>
