--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen background-image">
+<div class="flex flex-col min-h-screen background-image px-3">
   <app-loading></app-loading>
   <app-feedback></app-feedback>
   <app-header></app-header>
