update video webm mp4

--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -98,13 +98,22 @@
       </div>
       <div class="relative my-10">
         <video
-          src="../../../../assets/images/formulation_presentation.mkv"
           width="80%"
           height="audio"
           loop
           autoplay
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
-        ></video>
+          muted
+        >
+          <source
+            src="../../../../assets/videos/formulation_presentation.webm"
+            type="video/webm"
+          />
+          <source
+            src="../../../../assets/videos/formulation_presentation.mp4"
+            type="video/mp4"
+          />
+        </video>
         <div
           class="w-full h-full rounded-xl bg-basic-500 absolute top-6 z-[-1] shadow-2xl"
         ></div>
@@ -123,13 +132,21 @@
       </div>
       <div class="relative my-10">
         <video
-          src="../../../../assets/images/search_presentation.mkv"
           width="80%"
           height="audio"
           loop
           autoplay
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
-        ></video>
+        >
+          <source
+            src="../../../../assets/videos/search_presentation.webm"
+            type="video/webm"
+          />
+          <source
+            src="../../../../assets/videos/search_presentation.mp4"
+            type="video/mp4"
+          />
+        </video>
         <div
           class="w-full h-full rounded-xl bg-basic-500 absolute top-[-1.5rem] z-[-1] shadow-2xl"
         ></div>
@@ -151,13 +168,21 @@
       </div>
       <div class="relative my-10">
         <video
-          src="../../../../assets/images/components_presentation.mkv"
           width="80%"
           height="audio"
           loop
           autoplay
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
-        ></video>
+        >
+          <source
+            src="../../../../assets/videos/components_presentation.webm"
+            type="video/webm"
+          />
+          <source
+            src="../../../../assets/videos/components_presentation.mp4"
+            type="video/mp4"
+          />
+        </video>
         <div
           class="w-full h-full rounded-xl bg-basic-500 absolute top-[-1.5rem] z-[-1] shadow-2xl"
         ></div>
@@ -179,13 +204,21 @@
       </div>
       <div class="relative my-10">
         <video
-          src="../../../../assets/images/profiles_presentation.mkv"
           width="80%"
           height="audio"
           loop
           autoplay
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
-        ></video>
+        >
+          <source
+            src="../../../../assets/videos/profiles_presentation.webm"
+            type="video/webm"
+          />
+          <source
+            src="../../../../assets/videos/profiles_presentation.mp4"
+            type="video/mp4"
+          />
+        </video>
         <div
           class="w-full h-full rounded-xl bg-basic-500 absolute top-6 z-[-1] shadow-2xl"
         ></div>
