--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div class="flex flex-col min-h-screen background-image px-3">
+<div class="flex flex-col min-h-screen background-image">
   <app-loading></app-loading>
   <app-feedback></app-feedback>
-  <app-header></app-header>
-  <router-outlet></router-outlet>
+  <div class="mx-3">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+  </div>
   <div class="mt-auto bg-secondary-500">
     <app-footer></app-footer>
   </div>
