--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -29,7 +29,7 @@
         class="self-center"
       />
       <h3
-        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-word"
       >
         Administración de datos
       </h3>
@@ -45,7 +45,7 @@
         class="self-center"
       />
       <h3
-        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-word"
       >
         Formulación sencilla
       </h3>
@@ -61,7 +61,7 @@
         class="self-center"
       />
       <h3
-        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-word"
       >
         Acceso customizado
       </h3>
@@ -77,7 +77,7 @@
         class="self-center"
       />
       <h3
-        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-all"
+        class="text-center mt-2 dark:text-secondary-500 text-base md:text-xl break-word"
       >
         Filtrado de datos
       </h3>
@@ -101,7 +101,8 @@
           width="80%"
           height="audio"
           loop
-          autoplay
+          playsinline
+          #video1
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
           muted
         >
@@ -135,7 +136,8 @@
           width="80%"
           height="audio"
           loop
-          autoplay
+          #video2
+          playsinline
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
           <source
@@ -171,7 +173,8 @@
           width="80%"
           height="audio"
           loop
-          autoplay
+          #video3
+          playsinline
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
           <source
@@ -207,7 +210,8 @@
           width="80%"
           height="audio"
           loop
-          autoplay
+          playsinline
+          #video4
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
           <source
