prueba video1 iphone

--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -102,6 +102,7 @@
           height="audio"
           loop
           playsinline
+          autoplay
           #video1
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
           muted
@@ -138,6 +139,7 @@
           loop
           #video2
           playsinline
+          autoplay
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
           <source
@@ -175,6 +177,7 @@
           loop
           #video3
           playsinline
+          autoplay
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
           <source
@@ -211,6 +214,7 @@
           height="audio"
           loop
           playsinline
+          autoplay
           #video4
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
