--- a/frontend/src/app/shared/components/landing-page/landing-page.component.html
+++ b/frontend/src/app/shared/components/landing-page/landing-page.component.html
@@ -99,13 +99,13 @@
       <div class="relative my-10">
         <video
           width="80%"
-          height="audio"
+          height="auto"
           loop
           playsinline
           autoplay
+          muted
           #video1
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
-          muted
         >
           <source
             src="../../../../assets/videos/formulation_presentation.webm"
@@ -135,11 +135,12 @@
       <div class="relative my-10">
         <video
           width="80%"
-          height="audio"
+          height="auto"
           loop
-          #video2
           playsinline
           autoplay
+          muted
+          #video2
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
           <source
@@ -173,11 +174,12 @@
       <div class="relative my-10">
         <video
           width="80%"
-          height="audio"
+          height="auto"
           loop
-          #video3
           playsinline
           autoplay
+          muted
+          #video3
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
           <source
@@ -211,10 +213,11 @@
       <div class="relative my-10">
         <video
           width="80%"
-          height="audio"
+          height="auto"
           loop
           playsinline
           autoplay
+          muted
           #video4
           class="m-auto rounded-xl shadow-2xl border-2 border-basic-500 max-w-[800px]"
         >
