replace link a with buttons footer

--- a/frontend/src/app/shared/components/footer/footer.component.html
+++ b/frontend/src/app/shared/components/footer/footer.component.html
@@ -6,31 +6,32 @@
       class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap"
     >
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('register')"
-          >Registrarse</a
+          >Registrarse</button
         >
       </li>
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('login')"
-          >Iniciar sesión</a
+          >Iniciar sesión</button
         >
       </li>
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('forgot-password')"
-          >Recuperar contraseña</a
         >
+          Recuperar contraseña
+        </button>
       </li>
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('')"
-          >Contacto</a
+          >Contacto</button
         >
       </li>
     </ul>
@@ -41,39 +42,39 @@
       class="flex justify-center m-auto p-1 max-w-[400px] flex-wrap"
     >
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('configuration')"
-          >Mi cuenta</a
+          >Mi cuenta</button
         >
       </li>
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('recipes')"
-          >Formulaciones</a
+          >Formulaciones</button
         >
       </li>
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('components')"
-          >Componentes</a
+          >Componentes</button
         >
       </li>
       <li class="mx-1">
-        <a
+        <button
           class="text-sm text-basic-500 hover:text-primary-500"
           (click)="navigate('configuration')"
-          >Contacto</a
+          >Contacto</button
         >
       </li>
     </ul>
   </nav>
   <div class="text-center">
     <span class="text-basic-400 text-xs">
-      <span class="material-icons inline-block text-xs">copyright</span> 2022. Todos los derechos
-      reservados.</span
+      <span class="material-icons inline-block text-xs">copyright</span> 2022.
+      Todos los derechos reservados.</span
     >
   </div>
 </div>
